# rust-sqlite-sync

./: .editorconfig  .eslintrc.cjs  .eslintrc.cjs.temp  .gitignore  .rustfmt.toml  Cargo.toml  README.md  package-lock.json  package.json  test.db-2  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
src/: App.tsx  discovery.rs  init.sql  main.rs  queries.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: discovery.rs  init.sql  lib.rs  main.rs  queries.rs  queries_tests.rs
