[package]
name = "rust-sqlite-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["load_extension", "bundled"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_rusqlite = "0.34.0"
